--- a/index.html
+++ b/index.html
@@ -12,27 +12,22 @@
    <div class="profile">
         <img src="img/bea.jpeg" alt="Beatriz" class="avatar">
         <h1>Beatriz Ferraz</h1>
-        <h2>Desenvolvedora JR|Graduanda em S.I</h2>
+        <h2>Desenvolvedora JR | Graduanda em S.I</h2>
    </div>
 
     <ul class="social">
         <li>
-          <a href="">
+          <a href="https://github.com/bea-ferraz">
             <img src="img/github.svg" alt="github">
          </a>
         </li>
         <li>
-          <a href="">
+          <a href="https://www.linkedin.com/in/beatrizferraz-/">
             <img src="img/linkedin.svg" alt="linkedin">
           </a>
         </li>
         <li>
-          <a href="">
-            <img src="img/whatsapp.png" alt="whatsapp">
-          </a>
-        </li>
-        <li>
-            <a href="">
+            <a href="mailto:beaferraz.contato@gmail.com">
               <img src="img/gmail.png" alt="gmail">
             </a>
           </li> 
@@ -40,40 +35,33 @@
 
     <ul class="links-list">
         <li>
-            <a href="">
-             Desenvolvimento Web FullStack
-             <span>Curso de programação para iniciantes.</span>
-            </a>   
-        </li>
-        <li>
-            <a href="">
-             Fábrica de aplicativos React Native
-             <span>Curso de programação para iniciantes.</span>
+            <a href="https://www.rocketseat.com.br/discover">
+             DICA
+             <span>Curso de programação gratuito para iniciantes.</span>
             </a>   
         </li>
     </ul>
     <ul class="links-list">
         <li>
-            <a href="https://wa.me/5561991548133">
-             Portifolio
-             <span>acesse aqui</span>
-            </a>   
+          <a href="https://wa.me/5561991548133">
+            PORTIFÓLIO
+            <span>Acesse aqui o meu portifólio</span>
+          </a>   
         </li>
         <li>
-            <a href="mailto:beaferraz.contato@gmail.com">
-             Gmail
-             <span>Entre em contato por E-mail</span>
-            </a>   
+          <a href="https://drive.google.com/file/d/182673Si7khe4kZmxC2JT48yoMWMldrWw/view?usp=sharing">
+           CURRÍCULO
+           <span>Acesse aqui o meu currículo</span>
+          </a>   
         </li>
         <li>
-            <a href="https://wa.me/5561991548133">
-             Whatsapp
-             <span>Entre em contato por whatsapp</span>
-            </a>   
+          <a href="https://www.youtube.com/watch?v=lH8iDuJs6Yc">
+            PITCH PESSOAL
+            <span>Acesse aqui o meu video de apresentação</span>
+          </a>   
         </li>
+  
     </ul>
-
-
 
 </body>
 </html>
