--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
         <li>
           <a href="https://wa.me/5561991548133">
             PORTIFÓLIO
-            <span>Acesse aqui o meu portifólio</span>
+            <span>Acesse aqui o meu portifólio.</span>
           </a>   
         </li>
         <li>
           <a href="https://drive.google.com/file/d/182673Si7khe4kZmxC2JT48yoMWMldrWw/view?usp=sharing">
            CURRÍCULO
-           <span>Acesse aqui o meu currículo</span>
+           <span>Acesse aqui o meu currículo.</span>
           </a>   
         </li>
         <li>
           <a href="https://www.youtube.com/watch?v=lH8iDuJs6Yc">
             PITCH PESSOAL
-            <span>Acesse aqui o meu video de apresentação</span>
+            <span>Acesse aqui o meu video de apresentação.</span>
           </a>   
         </li>
   
