--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </ul>
     <ul class="links-list">
         <li>
-          <a href="https://wa.me/5561991548133">
+          <a href="https://bea-ferraz.github.io/Portifolio.github.io/">
             PORTIFÓLIO
             <span>Acesse aqui o meu portifólio.</span>
           </a>   
