Adicionando o Google Analytics

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Linktree</title>
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WD44M2LW4J"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-WD44M2LW4J');
+    </script>
 </head>
 <body>
    <div class="profile">
@@ -43,7 +52,7 @@
     </ul>
     <ul class="links-list">
         <li>
-          <a href="https://bea-ferraz.github.io/Portifolio/">
+          <a href="https://wa.me/5561991548133">
             PORTIFÓLIO
             <span>Acesse aqui o meu portifólio.</span>
           </a>   
