--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
     </ul>
     <ul class="links-list">
         <li>
-          <a href="https://wa.me/5561991548133">
+          <a href="https://bea-ferraz.github.io/Portifolio/">
             PORTIFÓLIO
             <span>Acesse aqui o meu portifólio.</span>
           </a>   
         </li>
         <li>
-          <a href="https://drive.google.com/file/d/182673Si7khe4kZmxC2JT48yoMWMldrWw/view?usp=sharing">
+          <a href="https://drive.google.com/file/d/16ZyUYrZ14SaNI1XPeeE_AsOnaWbTzIMd/view?usp=sharing">
            CURRÍCULO
            <span>Acesse aqui o meu currículo.</span>
           </a>   
